hphp/hack/test/typecheck/reactive/mayberx7_2.php.exp
File "mayberx7_2.php", line 11, characters 10-48:
Reactive functions can only call other reactive functions. (Typing[4200])
File "mayberx7_2.php", line 4, characters 10-16:
This function is not reactive.
